[tool.poetry]
name = "badea-mouse"
version = "0.1.0"
description = ""
authors = ["j1c <jaewonc78@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
typing-extensions = "^4.3"
seaborn = "^0.12.0"
graspologic = { git = "https://github.com/microsoft/graspologic.git", branch = "dev"}
jupyterlab = "^3.4.6"
pkg = {path = "pkg", develop = true}
statsmodels = "^0.13.2"
plotly = "^5.10.0"
jupyterlab-code-formatter = "^1.5.3"
black = "^22.8.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
CairoSVG = "^2.5.2"
svgutils = "^0.3.4"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
jupyter-book = "^0.13.1"
jupyterlab-code-formatter = "^1.5.3"
isort = "^5.10"
myst-nb = ">=0.13.1,<0.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"